[workspace]
resolver = "2"

members = [
    "culsynth",
    "culsynth_plugin",
    "culsynth_bindings",
    "culsynth_2040",
    "xtask",
]

default-members = [ "culsynth_plugin" ]

[workspace.package]
edition = "2021"
repository = "https://github.com/rbmj/culsynth"
version = "0.2.0"
authors = ["R Blair Mason"]
license = "MIT"

[profile.dev]
opt-level = 1

[workspace.dependencies]
wmidi = "4.0"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }