[workspace]
resolver = "2"

members = [
    "culsynth",
    "culsynth_plugin",
    "culsynth_bindings",
    "culsynth_2040",
    "xtask",
]

default-members = [ "culsynth_plugin" ]

[workspace.package]
edition = "2021"
repository = "https://github.com/rbmj/culsynth"
version = "0.2.0"
authors = ["R Blair Mason"]
license = "MIT"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
#strip = "symbols"

[workspace.dependencies]
wmidi = "4.0"
fixed = "1.28"
eframe = { version = "0.31", features = []}
egui = { version = "0.31", features = ["persistence", "log", "serde"] }
log = { version = "0.4" }
serde = { version = "1.0" }
arrayvec = { version = "0.7.4", default-features = false }
oorandom = "11.1.4"
