[package]
name = "culsynth"
description = "Culsynth DSP Library"
documentation = "https://docs.rs/culsynth"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "culsynth"
path = "src/lib.rs"
crate_type = ["rlib"]

[dependencies]
fixed = "1.24"
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
arrayvec = { version = "0.7.4", default-features = false }

[features]
libm = ["num-traits/libm"]
rand_defaults = ["rand/default"]

