[package]
name = "culsynth"
description = "Culsynth DSP Library"
documentation = "https://docs.rs/culsynth"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "culsynth"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = { workspace = true }
arrayvec = { version = "0.7.4", default-features = false }
wmidi = { workspace = true }
fixed = { workspace = true }


[features]
libm = ["num-traits/libm"]
rand_defaults = ["rand/default"]
