[package]
name = "culsynth"
description = "Culsynth DSP Library"
documentation = "https://docs.rs/culsynth"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "culsynth"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
oorandom = { workspace = true }
arrayvec = { workspace = true }
wmidi = { workspace = true }
fixed = { workspace = true }
serde = { workspace = true}

[features]
libm = ["num-traits/libm"]
std = []
