[package]
name = "culsynth_bindings"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Culsynth DSP Bindings"

[lib]
name = "culsynth"
path = "src/lib.rs"
crate_type = ["cdylib"]
# Documentation will live in the binding header itself instead of the rust
# implementation file
doc = false

[dependencies]
culsynth = { path = "../culsynth", version = "0.2.0" }
