[package]
name = "culsynth_bindings"
description = "Culsynth DSP Bindings"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "culsynth"
path = "src/lib.rs"
crate_type = ["cdylib"]
# Documentation will live in the binding header itself instead of the rust
# implementation file
doc = false

[dependencies]
culsynth = { path = "../culsynth", version = "0.2.0" }