[package]
name = "culsynth_plugin"
description = "Culsynth Software Synthesizer"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "culsynth_plugin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "culsynth-standalone"
path = "src/main.rs"

[dependencies]
#nih_plug = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0", features = ["standalone", "vst3"] , optional = true }
#nih_plug_egui = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0" , optional = true }
nih_plug = { path = "../../nih-plug", version = "0.0.0", features = ["standalone", "vst3"] , optional = true }
nih_plug_egui = { path = "../../nih-plug/nih_plug_egui", version = "0.0.0" , optional = true }
lazy_static = "1.4.0"
regex = "1.10.3"
piano_keyboard = "0.2.3"
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true}
log = { workspace = true}
rand = { workspace = true }
wmidi = {workspace = true }
fixed = { workspace = true }
culsynth = { path = "../culsynth", version = "0.2.0", features = ["rand_defaults"]}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = {version = "0.3.77", optional = true }

[features]
default = ["nih"]
nih = ["dep:nih_plug", "dep:nih_plug_egui"]
eframe = ["dep:eframe", "dep:egui"]
