[package]
name = "culsynth_plugin"
description = "Culsynth Software Synthesizer"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "culsynth_plugin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "culsynth-standalone"
path = "src/main.rs"

[dependencies]
nih_plug = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0", features = [
    "vst3",
], optional = true }
nih_plug_egui = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0", optional = true }
lazy_static = "1.4.0"
regex = "1.10.3"
piano_keyboard = "0.2.3"
pipewire = { version = "0.8.0", optional = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
log = { workspace = true }
oorandom = { workspace = true }
wmidi = { workspace = true }
fixed = { workspace = true }
getrandom = { version = "0.3.1", optional = true }
culsynth = { path = "../culsynth", version = "0.2.0", features = ["std"] }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", optional = true, features = [
    "MessagePort",
    "AudioWorklet",
    "AudioWorkletProcessor",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0", optional = true }
colog = { version = "1.3", optional = true }

[features]
default = ["nih", "getrandom", "pw-standalone"]
nih = ["dep:nih_plug", "dep:nih_plug_egui"]
nih-standalone = ["nih_plug/standalone", "dep:nih_plug_egui"]
pw-standalone = ["dep:pipewire", "dep:eframe", "dep:egui", "dep:colog"]
eframe = ["dep:eframe", "dep:egui"]
wasm = ["getrandom?/wasm_js"]
audioworklet = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "getrandom?/wasm_js",
    "dep:console_error_panic_hook",
    "dep:console_log",
]
