[package]
name = "culsynth_plugin"
description = "Culsynth Software Synthesizer"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "culsynth_plugin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "culsynth"
path = "src/pw_standalone.rs"
required-features = ["pw-standalone"]

[[bin]]
name = "culsynth-jack"
path = "src/nih_standalone.rs"
required-features = ["nih-standalone"]

[dependencies]
nih_plug = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0", features = [
    "vst3",
], optional = true }
nih_plug_egui = { git = "https://github.com/rbmj/nih-plug.git", version = "0.0.0", optional = true }
lazy_static = "1.4.0"
regex = "1.10.3"
piano_keyboard = "0.2.3"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", optional = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
log = { workspace = true }
oorandom = { workspace = true }
wmidi = { workspace = true }
fixed = { workspace = true }
getrandom = { version = "0.3.1", optional = true }
culsynth = { path = "../culsynth", version = "0.2.0", features = ["std"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0", optional = true }
colog = { version = "1.3", optional = true }
ringbuffer = { version = "0.15", optional = true}
egui_plot = { version = "0.32", optional = true }
serde = { workspace = true, features = ["std"] }

[features]
default = ["nih", "getrandom", "nih-standalone"]
nih = ["dep:nih_plug", "dep:nih_plug_egui"]
nih-standalone = ["nih_plug/standalone", "nih"]
pw-standalone = ["dep:pipewire", "dep:colog", "use-eframe"]
use-eframe = ["dep:eframe", "dep:egui"]
wasm = ["getrandom?/wasm_js"]
instrumentation = ["dep:ringbuffer", "dep:egui_plot"]