[lib]
crate-type = ["cdylib"]

[package]
name = "culsynth_web"
description = "Culsynth Software Synthesizer"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true}
getrandom = { version = "0.3.1", features = ["wasm_js"]}
culsynth_plugin = { path = "../culsynth_plugin", version = "0.2.0", default-features = false, features = ["eframe"]}
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
wmidi = {workspace = true }
fixed = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { version = "0.2.100"}
web-sys = {version = "0.3.77", features = ["AudioContext"] }
wasm-bindgen-futures = "0.4"
