[package]
name = "janus"
version = "0.0.0"
edition = "2021"
description = "Janus Synthesizer"

[lib]
name = "janus"
path = "src/lib.rs"
crate_type = ["rlib"]

[dependencies]
fixed = "1.24"
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
tinyvec = { version = "1.6.0", features = ["rustc_1_40"] }

[features]
libm = ["num-traits/libm"]