[package]
name = "janus_bindings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Janus DSP Bindings"

[lib]
name = "janus"
path = "src/lib.rs"
crate_type = ["cdylib"]
# Documentation will live in the binding header itself instead of the rust
# implementation file
doc = false

[dependencies]
janus = { path = "../janus" }
